--- a/css/catatumbo-ed172a.webflow.css
+++ b/css/catatumbo-ed172a.webflow.css
@@ -67,6 +67,7 @@
 .hover-image {
   width: 100%;
   cursor: none;
+  border-radius: 20px;
   display: none;
   position: absolute;
 }
@@ -175,6 +176,15 @@
     margin-top: 30px;
   }
 
+  .image-wrapper {
+    height: 38vw;
+    grid-column-gap: 16px;
+    grid-row-gap: 16px;
+    grid-template-rows: auto auto;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-columns: 1fr;
+  }
+
   .modal {
     height: 80%;
     flex-direction: column;
@@ -212,6 +222,10 @@
     font-size: 15px;
   }
 
+  .image-wrapper {
+    height: 75vw;
+  }
+
   .modal {
     width: 90%;
     height: 60%;
@@ -246,6 +260,10 @@
 
   .image-3 {
     width: 60%;
+  }
+
+  .image-wrapper {
+    height: 71vw;
   }
 
   .modal {
